Fix CSS bug on mobile header

--- a/src/components_client/header_mobile/headerMobile.module.css
+++ b/src/components_client/header_mobile/headerMobile.module.css
@@ -7,10 +7,10 @@
 }
 
 .menu {
-	width: 100%;
 	height: 100%;
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
 	padding: 0 20px;
 	.right {
 		display: flex;
